Added fn. to scale up network with fixed degree

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 .DS_Store
 *.tgz
 
+# This is for files which are used to prepare the final challenge
+*-hidden.nb
+
 documentation/*.log
 documentation/*.aux
 documentation/*.bbl
