Extracted NEST meta code to external module.

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 *.tgz
 
 # This is for files which are used to prepare the final challenge
-*-hidden.nb
+*hidden.*
 
 documentation/*.log
 documentation/*.aux
